<resources>
    <string name="app_name">UniversityNd</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configurações</string>
    <string name="publique_duvida">Publique sua Dúvida</string>
    <string name="ultimas_duvidas">Últimas Dúvidas</string>
    <string name="busca_avancada">Busca Avançada</string>
    <string name="meu_perfil">Meu Perfil</string>
    <string name="responder">Responder</string>
    <string name="suaResposta">Digite Sua Resposta</string>
    <string name="enviar">Enviar</string>
    <string name="cancelar">Cancelar</string>
    <string name="textoLogin">Você deve realizar o login com sua conta do AVA.</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="acessoAva">Login com o AVA</string>
    <string name="selecionar_categoria">Selecione uma Categoria:</string>
    <string name="selecionar_tipo">Selecione um Tipo de Usuário:</string>
    <string name="bucar">Buscar</string>
    <string name="prompt">Selecione</string>
    <string-array name="Categorias">
        <item>Dispensa de Disciplina</item>
        <item>Estágio</item>
        <item>Matrícula</item>
    </string-array>
    <string-array name="TipoUsuario">
        <item>Aluno</item>
        <item>Coordenação</item>
        <item>Professor</item>
        <item>Secretaria</item>
    </string-array>
</resources>
