<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:padding="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textCategoria"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selecionar_categoria" />
           <Spinner
               android:id="@+id/spinner1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:entries="@array/Categorias"
               android:prompt="@string/prompt">
           </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/selecionar_tipo" />
            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/TipoUsuario"
                android:prompt="@string/prompt">
            </Spinner>
        </LinearLayout>


        <Button
            android:id="@+id/btnBuscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_gravity="end"
            android:background="@android:color/holo_red_dark"
            android:textColor="@android:color/white"
            android:text="@string/bucar" />
    </LinearLayout>
</ScrollView>