<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:padding="16dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/DuvidaNome"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nome" />
            <TextView
                android:id="@+id/DuvidaData"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:text="10/12/17" />
        </LinearLayout>
        <TextView
            android:id="@+id/DuvidaDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Minha duvida é sobre dispensa de disciplina.." />
        <Button
            android:id="@+id/btnShowResposta"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:background="@android:color/holo_red_dark"
            android:textColor="@android:color/white"
            android:text="@string/responder"/>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/llResposta"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edtResposta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/suaResposta"
                android:inputType="textMultiLine" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btnEnviar"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:background="@android:color/holo_red_dark"
                    android:textColor="@android:color/white"
                    android:text="@string/enviar" />
                <Button
                    android:id="@+id/btnCancelar"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:background="@android:color/holo_red_dark"
                    android:textColor="@android:color/white"
                    android:text="@string/cancelar"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>