<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:padding="16dp">
        <TextView
            android:id="@+id/DuvidaNome"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/DuvidaAssunto"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />
            <TextView
                android:id="@+id/DuvidaData"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:text="" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:paddingLeft="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:background="@android:color/darker_gray"
            android:paddingRight="5dp">
            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginRight="2dp"
                android:src="@drawable/ic_person"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:id="@+id/DuvidaInteressado"
                android:textColor="@android:color/black"
                android:text="@string/prof" />
        </LinearLayout>

        <TextView
            android:id="@+id/DuvidaDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="" />

        <Button
            android:id="@+id/btnShowResposta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/holo_red_dark"
            android:text="@string/responder"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/llResposta"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edtResposta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/suaResposta"
                android:inputType="textMultiLine" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btnEnviar"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:background="@android:color/holo_red_dark"
                    android:textColor="@android:color/white"
                    android:text="@string/responder"
                    android:layout_marginRight="10dp"/>
                <Button
                    android:id="@+id/btnCancelar"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:background="@android:color/holo_red_dark"
                    android:textColor="@android:color/white"
                    android:text="@string/cancelar" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/countRespostas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dp"
        android:textAlignment="center"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/listaRespostas"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_marginTop="1dp"
        android:layout_height="match_parent" />
</LinearLayout>