<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp"
            android:layout_weight="0.5">
            <android.support.v7.widget.CardView
                android:id="@+id/publique_duvida"
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:layout_gravity="center"
                android:clickable="true"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="3dp"
                card_view:cardUseCompatPadding="true"
                card_view:contentPadding="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:adjustViewBounds="true"
                        android:padding="15dp"
                        android:src="@drawable/ic_question" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.6dp"
                        android:paddingTop="10dp"
                        android:background="@color/grey" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/publique_duvida"
                        android:textAlignment="center"
                        android:paddingTop="10dp"
                        android:textSize="14dp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_weight="0.5">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:id="@+id/ultimas_duvidas"
                android:clickable="true"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="3dp"
                card_view:contentPadding="5dp"
                card_view:cardUseCompatPadding="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:adjustViewBounds="true"
                        android:padding="15dp"
                        android:src="@drawable/ic_list" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.6dp"
                        android:background="@color/grey" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ultimas_duvidas"
                        android:textAlignment="center"
                        android:paddingTop="10dp"
                        android:textSize="14dp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_weight="0.5">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:id="@+id/busca_avancada"
                android:clickable="true"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="3dp"
                card_view:contentPadding="5dp"
                card_view:cardUseCompatPadding="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:adjustViewBounds="true"
                        android:padding="15dp"
                        android:src="@drawable/ic_search1" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.6dp"
                        android:background="@color/grey" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/busca_avancada"
                        android:textAlignment="center"
                        android:paddingTop="10dp"
                        android:textSize="14dp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp"
            android:layout_weight="0.5">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:layout_gravity="center"
                android:id="@+id/meu_perfil"
                android:clickable="true"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="3dp"
                card_view:contentPadding="5dp"
                card_view:cardUseCompatPadding="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:adjustViewBounds="true"
                        android:padding="15dp"
                        android:src="@drawable/ic_user" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.6dp"
                        android:background="@color/grey" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/meu_perfil"
                        android:textAlignment="center"
                        android:paddingTop="10dp"
                        android:textSize="14dp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>